[metadata]
name=OpenFlowsAPI-Water-Stubs-Bentley
version=0.0.4
author=Kristopher L. Culin
author_email=kris.culin@bentley.com
description = Python stubs for use with OpenFlowsAPI for Water (a.k.a. WaterObjectsLite)
long_description= file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrMontana1889/OpenFlowsAPI-water-stubs
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = Openflows
packages = find:
python_requires = >=3.9

[options.packages.find]
where = OpenFlows